# rust-embedded-quickstart

./: .gitignore  Cargo.toml  README.md  memory.x  ocd.ps1  ocd.sh  openocd.gdb  output.ps1
.cargo/: config
src/: main.rs
