[package]
name = "anyleaf_watermonitor"
version = "0.1.0"
authors = ["Anyleaf <david.alan.oconnor@gmail.com>"]
edition = "2018"

[dependencies]
# Standard HAL dependencies
cortex-m = "0.6.2" # CPU specific
cortex-m-rt = "0.6.12" # CPU specific
stm32f3xx-hal = { version = "0.4.3", features=["stm32f303xc", "rt"] } # MCU specific
f3 ="0.6.1"   # MCU specific. Not imported directly, but required to work.
embedded-hal = { version = "0.2.3", features=["unproven"] } # Traits to standardize APIs

rtt-target = { version = "0.2.0", features = ["cortex-m"] }

# These settings reduce file size when compiled in release mode.
[profile.release]
codegen-units = 1
debug = true
lto = true