[package]
name = "project_name"
version = "0.1.0"
authors = ["Your Name <your@email.com>"]
edition = "2018"

[dependencies]
# Standard HAL dependencies
#cortex-m = "0.7.0"  # Rtt target is incompat
cortex-m = "^0.6.2" # MCU architecture specific
cortex-m-rt = "^0.6.12" # MCU architecture specific
stm32f3xx-hal-v2 = { version = "^0.5.0", features=["stm32f303xc", "rt"] } # MCU specific
stm32f3 = "^0.12.1"   # MCU specific. Not imported directly, but required to work.
embedded-hal = { version = "^0.2.4", features=["unproven"] } # Traits to standardize APIs

rtt-target = { version = "^0.2.2", features = ["cortex-m"] }

# These settings reduce file size when compiled in release mode.
[profile.release]
codegen-units = 1
debug = true
lto = true